FAQS page - Trabajamos page - Fixed new version React-hook-form validations

--- a/src/App.css
+++ b/src/App.css
@@ -1,1 +1,9 @@
+.subtitleText {
+    font-family: "Montserrat", sans-serif !important;
+    font-size: 1rem !important;
+}
 
+.bodyText {
+    font-family: "Montserrat", sans-serif !important;
+    font-size: 0.9rem !important;
+}
